# FlowMate

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  STABILIZATION_REPORT.md  compose.yaml  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
apps/web/: Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_create_users.py  0003_expand_users.py  0004_create_notes.py  0005_create_drafts.py  0006_create_task_engine.py  0007_add_draft_conversion_provenance.py  0008_work_item_management.py  0009_create_reminders.py  0010_connect_work_item_reminders.py  0011_user_notification_preferences.py  0012_main_menu_navigation.py  0013_pwa_auth.py  0014_pwa_operations.py  0015_pwa_remaining_screens.py  0016_meeting_mode_foundation.py  0017_meeting_fast_capture.py  0018_meeting_review_completion.py  0019_stage7_stabilization.py  0020_stage8_stabilization.py  0021_workspace_separation.py
scripts/: backup_postgres.sh  restore_postgres.sh  run_checks.sh  start-api.sh
src/flowmate/: __init__.py  config.py  workspace_service.py  workspaces.py
tests/: __init__.py  ai_factories.py  conftest.py
tests/fixtures/: ai_eval.json
tests/integration/: test_api_health.py  test_bot.py  test_database.py  test_draft_conversion.py  test_drafts.py  test_meetings.py  test_navigation.py  test_notes.py  test_notification_preferences.py  test_pwa_auth.py  test_pwa_operations.py  test_reminders.py  (+7 more)
(+185 files in other folders)
