[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flowmate"
version = "0.1.0"
description = "Technical foundation for the Voice PM Assistant"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "aiogram>=3.20,<4",
    "alembic>=1.16,<2",
    "asyncpg>=0.30,<1",
    "fastapi>=0.116,<1",
    "openai>=2.46,<3",
    "pydantic-settings>=2.10,<3",
    "sqlalchemy[asyncio]>=2.0.41,<3",
    "uvicorn[standard]>=0.35,<1",
]

[dependency-groups]
dev = [
    "httpx>=0.28,<1",
    "mypy>=1.16,<2",
    "pytest>=8.4,<9",
    "pytest-asyncio>=1.0,<2",
    "pytest-cov>=6.2,<8",
    "ruff>=0.12,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/flowmate"]

[tool.pytest.ini_options]
addopts = "-ra --cov=flowmate --cov-report=term-missing"
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["integration: requires a PostgreSQL test database"]

[tool.coverage.run]
branch = true
source = ["flowmate"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "alembic.*"
ignore_missing_imports = true
